# EMLR

./: .gitignore  CMakeLists.txt  LICENSE  README.md
BenchOutputs/testbedII_Tes-V100/cublasDaxpy/: model_dev-0.out
BenchOutputs/testbedII_Tes-V100/cublasDgemm/: model_dev-0.out
BenchOutputs/testbedII_Tes-V100/cublasDgemv/: model_dev-0.out
BenchOutputs/testbedII_Tes-V100/cublasSet_Get/: model_-1_0.out  model_0_-1.out
BenchOutputs/testbedII_Tes-V100/cublasSgemm/: model_dev-0.out
BenchOutputs/testbedI_Tes-K40/cublasDaxpy/: model_dev-0.out
BenchOutputs/testbedI_Tes-K40/cublasDgemm/: model_dev-0.out
BenchOutputs/testbedI_Tes-K40/cublasDgemv/: model_dev-0.out
BenchOutputs/testbedI_Tes-K40/cublasSet_Get/: model_-1_0.out  model_0_-1.out
BenchOutputs/testbedI_Tes-K40/cublasSgemm/: model_dev-0.out
R_scripts/: Stepwise_model_AIC.r  helpers.r  transfer_models.r
Sh_runners/: Deploy_micro-benchmarks.sh  Generate_R_models.sh
include/: cpu_utils.hpp  gpu_utils.hpp
lib/: cpu_utils.cpp  gpu_utils.cu
src/: daxpy_microbench_gpu.cu  dgemm_microbench_gpu.cu  dgemv_microbench_gpu.cu  sgemm_microbench_gpu.cu  transfers_microbench_gpu.cu
